[package]
name = "malevolence"
description = "Unofficial Rust bindings for the OpenDota API"
authors = ["fawn <fawn@envs.net>"]
version = "0.1.0"
edition = "2021"
license = "OSL-3.0"
repository = "https://github.com/fawni/malevolence"

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
